--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -22,7 +22,7 @@
 
     <include
         layout="@layout/content_main"
-        android:background="@color/darkLight"
-        android:foregroundTint="@color/darkLight" />
+        android:background="@color/light"
+        android:foregroundTint="@color/light" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
