--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -8,14 +8,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="2"
+        android:layout_weight="1.5"
         android:background="@drawable/image"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/userImage"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
             tools:srcCompat="@tools:sample/avatars" />
@@ -28,7 +28,7 @@
             android:fontFamily="sans-serif-black"
             android:text="@string/app_name"
             android:textAlignment="center"
-            android:textColor="@color/white"
+            android:textColor="@color/textName"
             android:textSize="30sp" />
 
         <TextView
@@ -36,8 +36,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:text="@string/app_name"
+            android:textStyle="bold"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="20sp" />
@@ -48,9 +49,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="@color/darkLight"
+        android:background="@color/light"
         android:orientation="vertical">
-
 
         <TextView
             android:id="@+id/useTitle"
@@ -58,6 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:text="@string/app_name"
+            android:textStyle="bold"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="20sp" />
@@ -67,6 +68,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="10dp"
+            android:textStyle="bold"
             android:layout_marginTop="10dp"
             android:textColor="@color/white" />
 
