--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkLight"
+    android:background="@color/light"
     tools:context=".ui.friends.FriendsFragment">
 
     <TextView
@@ -14,22 +14,22 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textColor="@color/white"
         android:text=""
-        android:textSize="30sp"
+        android:textAlignment="textStart"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/scrollView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.012" />
+        app:layout_constraintVertical_bias="0.10" />
 
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="550dp"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
@@ -42,13 +42,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:onClick="listenerFriend1"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/userImage1"
-                    android:layout_width="125dp"
-                    android:layout_height="125dp"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
                     app:srcCompat="@drawable/icon_my" />
 
                 <LinearLayout
@@ -84,13 +83,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="5dp"
-                android:onClick="listenerFriend2"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/userImage2"
-                    android:layout_width="125dp"
-                    android:layout_height="125dp"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
                     app:srcCompat="@drawable/icon_my" />
 
                 <LinearLayout
@@ -127,13 +125,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="5dp"
-                android:onClick="listenerFriend3"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/userImage3"
-                    android:layout_width="125dp"
-                    android:layout_height="125dp"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
                     app:srcCompat="@drawable/icon_my" />
 
                 <LinearLayout
@@ -170,13 +167,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="5dp"
-                android:onClick="listenerFriend4"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/userImage4"
-                    android:layout_width="125dp"
-                    android:layout_height="125dp"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
                     app:srcCompat="@drawable/icon_my" />
 
                 <LinearLayout
@@ -214,13 +210,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="5dp"
-                android:onClick="listenerFriend5"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/userImage5"
-                    android:layout_width="125dp"
-                    android:layout_height="125dp"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
                     app:srcCompat="@drawable/icon_my" />
 
                 <LinearLayout
@@ -257,13 +252,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="5dp"
-                android:onClick="listenerFriend6"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/userImage6"
-                    android:layout_width="125dp"
-                    android:layout_height="125dp"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
                     app:srcCompat="@drawable/icon_my" />
 
                 <LinearLayout
@@ -300,13 +294,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="5dp"
-                android:onClick="listenerFriend7"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/userImage7"
-                    android:layout_width="125dp"
-                    android:layout_height="125dp"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
                     app:srcCompat="@drawable/icon_my" />
 
                 <LinearLayout
