--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="#110707"
-    android:backgroundTint="@color/dark"
+    android:background="@color/dark"
+    android:backgroundTint="@color/light"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -15,8 +15,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="76dp"
+        android:layout_width="65dp"
+        android:layout_height="75dp"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@drawable/icon_my" />
@@ -38,4 +38,14 @@
         android:layout_height="wrap_content"
         android:text="@string/nav_header_subtitle"
         android:textColor="@color/white" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:focusable="true"
+        android:soundEffectsEnabled="true"
+        app:srcCompat="@android:drawable/ic_menu_view"
+        android:contentDescription="@string/todo1" />
 </LinearLayout>
