--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,7 +18,7 @@
         tools:layout="@layout/fragment_information_app" />
 
     <fragment
-        android:id="@+id/nav_friend2"
+        android:id="@+id/update"
         android:name="com.example.socialnetworkteo.ui.friends.FriendsFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
