--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -36,7 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="15dp"
             android:text="@string/app_name"
             android:textStyle="bold"
             android:textAlignment="center"
@@ -53,7 +53,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/useTitle"
+            android:id="@+id/userTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
@@ -64,13 +64,13 @@
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/detailsTextAboutMe"
+            android:id="@+id/detailsTextAbout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="10dp"
-            android:textStyle="bold"
             android:layout_marginTop="10dp"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
