--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,12 +8,19 @@
         android:icon="@android:drawable/ic_menu_myplaces"
         android:title="@string/menu_friends" />
 
-    <group android:checkableBehavior="single"
+    <group
         android:id="@+id/groupNavigationAdmin"
+        android:checkableBehavior="single"
         android:visible="true">
         <item
+            android:id="@+id/edit"
+            android:checkable="true"
+            android:icon="@android:drawable/ic_menu_edit"
+            android:onClick="editOpen"
+            android:title="@string/name_single_Item1" />
+        <item
             android:id="@+id/update"
-            android:icon="@android:drawable/btn_star_big_on"
-            android:title="@string/name2" />
+            android:icon="@android:drawable/dialog_holo_dark_frame"
+            android:title="@string/name_single_Item2" />
     </group>
 </menu>
