--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,8 @@
         android:fitsSystemWindows="true"
         android:verticalScrollbarPosition="left"
         app:headerLayout="@layout/nav_header_main"
-        app:itemIconTint="@color/purple_200"
-        app:itemTextColor="@color/white"
+        app:itemIconTint="@color/black"
+        app:itemTextColor="@color/black"
         app:menu="@menu/activity_main_drawer">
 
     </com.google.android.material.navigation.NavigationView>
