--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/nav_header_height"
-    android:background="@color/dark"
-    android:backgroundTint="@color/light"
+    android:id="@+id/navHeader"
+    android:layout_height="200dp"
+    android:background="@color/light"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -14,12 +14,15 @@
     android:theme="@style/ThemeOverlay.AppCompat.DayNight">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="65dp"
-        android:layout_height="75dp"
+        android:id="@+id/imageMy"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        app:srcCompat="@drawable/icon_my"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@drawable/icon_my" />
+        app:civ_border_width="2dp"
+        app:civ_border_color="@color/black"/>
+
 
     <TextView
         android:id="@+id/textProfile"
@@ -29,7 +32,7 @@
         android:text="@string/nav_header_title"
         android:textAlignment="textStart"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textStyle="bold" />
 
     <TextView
@@ -37,15 +40,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/nav_header_subtitle"
-        android:textColor="@color/white" />
+        android:textColor="@color/black" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/black"
+        android:backgroundTint="@color/light"
         android:clickable="true"
+        android:contentDescription="@string/todo1"
+        android:onClick="changeTheme"
         android:focusable="true"
         android:soundEffectsEnabled="true"
-        app:srcCompat="@android:drawable/ic_menu_view"
-        android:contentDescription="@string/todo1" />
+        android:tint="@color/light"
+        app:backgroundTint="@color/dark_blue"
+        app:fabSize="mini"
+        app:srcCompat="@android:drawable/ic_menu_view" />
 </LinearLayout>
