--- a/app/src/main/res/layout/activity_edit_user.xml
+++ b/app/src/main/res/layout/activity_edit_user.xml
@@ -23,6 +23,7 @@
         android:id="@+id/textEditUserName"
         android:layout_width="match_parent"
         android:layout_marginTop="5dp"
+        android:maxLength="20"
         android:layout_height="60dp"
         android:ems="10"
         app:layout_constraintTop_toBottomOf="@+id/userEditImage"
@@ -34,6 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="5dp"
+        android:maxLength="10"
         android:ems="10"
         app:layout_constraintTop_toBottomOf="@+id/textEditUserName"
         tools:ignore="SpeakableTextPresentCheck"
@@ -56,6 +58,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="5dp"
+        android:maxLength="25"
         android:ems="10"
         app:layout_constraintTop_toBottomOf="@+id/textEditUserAge"
         tools:ignore="SpeakableTextPresentCheck"
@@ -66,6 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="5dp"
+        android:maxLength="20"
         android:ems="10"
         app:layout_constraintTop_toBottomOf="@+id/textEditUserEmail"
         tools:ignore="SpeakableTextPresentCheck"
@@ -77,6 +81,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="60dp"
+        android:maxLength="500"
         android:ems="10"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textEditUserHobby"
