--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light"
-    tools:context=".ui.friends.FriendsFragment">
+    tools:context=".fragments.FriendsFragment">
 
     <TextView
         android:id="@+id/text_friends"
