--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_friends"
-        android:name="com.example.socialnetworkteo.ui.friends.FriendsFragment"
+        android:name="com.example.socialnetworkteo.fragments.FriendsFragment"
         android:label="@string/menu_friends"
         tools:layout="@layout/fragment_friends" />
 
